feat: add CreateUserCompany in repos
